--- a/home/index.html
+++ b/home/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
 
-        <link rel="icon" type="image/svg+xml" href="/home/circle.svg" />
+        <link rel="icon" type="image/svg+xml" href="circle.svg" />
         <link
             href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&family=Lexend+Zetta:wght@100..900&display=swap"
             rel="stylesheet"
